decouple pipeline from game